Update ru.json up to
File was reindented

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -915,7 +915,9 @@
 				"sprite": "Спрайт"
 			},
 			"gruntrules": "Использует правила пешек",
-			"mortype": "Магия/Резонанс"
+			"mortype": "Магия/Резонанс",
+			"grunt_group": "Отряд",
+			"grunt_group_id": "О{groupId}"
 		},
 		"numerical": {
 			"base": "баз",
@@ -1688,7 +1690,7 @@
 				},
 				"wrong_import_file": "Файлы сохранений GENESIS или COMMLINK невозможно импортировать! Сначала экспортируйте файл в формате FoundryVTT JSON.",
 				"statblock_import": {
-					"error": "Что-то пошло нге так при импортировании блока характеристик НИП. Попробуйте другую читалоку PDF, однако есть возможность, что ваш PDF файл не поддерживается.",
+					"error": "Что-то пошло не так при импортировании блока характеристик НИП. Попробуйте другую читалоку PDF, однако есть возможность, что ваш PDF файл не поддерживается.",
 					"success": "Блок характеристик «{actor}» скопирован ",
 					"actor_tab": "во вкладку актёров.",
 					"npc_compendium": "в библиотеку НИП."
@@ -1697,7 +1699,13 @@
 				"character_has_reloaded": "{character} перезарядил(а) {ammoType} патроны в свой {weaponName}.",
 				"character_has_switched_ammo": "{character} сменил(а) тип заряженных в {weaponName} патронов на {ammoType}.",
 				"character_has_changed_edge": "{character} вручную изменил(а) количество очков преимущества с {oldEdge} на {edge}",
-				"matrix_check_os": "Ваш текущий показатель надзора: {os}."
+				"matrix_check_os": "Ваш текущий показатель надзора: {os}.",
+				"bind_control_group": "Вы связали выбранные токены в группу управления «{controlGroup}».",
+				"select_control_group": "Вы выбрали группу управления токенов «{controlGroup}».",
+				"form_grunt_group": "Вы образовали отряд из выбранных токенов.",
+				"dismantle_grunt_group": "Вы распустили отряд из выбранных токенов.",
+				"form_grunt_group_failed": "Из выбранных токенов нельзя образовать отряд. В параметрах токена настройка «Привязка данных актёра» должна быть выключена.",
+				"grunt_group_takes_two": "Для создания отряда нужно выбрать больше одного токена."
 			}
 		},
 		"EFFECT": {
@@ -1865,14 +1873,62 @@
 			"armor.mod": "Модификаторы брони:",
 			"weapon.mod": "Модификаторы оружия:",
 			"stunOrPhysical": "Оглушающий (истина) или Физический (ложь) урон"
+		},
+		"KEYBINDINGS": {
+			"bindTokenControlGroup": "Связать выбранные токены в группу управления",
+			"selectTokenControlGroup": "Выбрать токены группы управления",
+			"formGruntGroup": "Создать отряд из выбранных токенов"
 		}
 	},
 	"SR6": {
 		"Actor": {
 			"base": {
-				"a": "b"
+				"FIELDS": {
+					"notes": {
+						"label": "Заметки"
+					}
+				}
 			},
-			"Sprite": {
+			"sprite": {
+				"FIELDS": {
+					"xxx": {
+						"label": "xxx"
+					}
+				},
+				"TYPES": {
+					"courier": "//ПОСЫЛЬНЫЙ//",
+					"crack": "//ВЗЛОМЩИК//",
+					"data": "//ИНФОСПРАЙТ//",
+					"fault": "//КРУШИТЕЛЬ//",
+					"machine": "//ТЕХНОСПРАЙТ//",
+					"assassin": "//УБИЙЦА//",
+					"defender": "//ЗАЩИТНИК//",
+					"modular": "//МОДУЛЬНЫЙ//",
+					"music": "//МУЗЫКАЛЬНЫЙ//",
+					"primal": "//ПЕРВОРОДНЫЙ//"
+				}
+			}
+		},
+		"Common": {
+			"FIELDS": {
+				"name": {
+					"label": "Название"
+				},
+				"effects": {
+					"label": "Эффекты"
+				},
+				"description": {
+					"label": "Описание"
+				},
+				"rating": {
+					"label": "Рейтинг"
+				},
+				"type": {
+					"label": "Тип"
+				}
+			},
+			"label": {
+				"name": "Название"
 			}
 		}
 	}
