New: Support Commlink item (sub)types (and missing Genesis ones)

--- a/lang/en.json
+++ b/lang/en.json
@@ -64,7 +64,8 @@
     		"skill": "Language/Knowledge Skill",
         "software": "Software",
     		"spell": "Spell",
-    		"weapon": "Weapon"
+    		"weapon": "Weapon",
+    		"mod": "Gear Mod"
   	}
   },
   "attrib": {
@@ -283,10 +284,14 @@
         "BIOWARE_COSMETICS": "Cosmetic Bioware",
         "BIOWARE_CULTURED": "Cultured Bioware",
         "BIOWARE_STANDARD": "Normal Bioware",
-        "BIOWARE_IMPLANT_WEAPON": "Bioimplantweapon",
+        "BIOWARE_IMPLANT_WEAPON": "Bioweapons",
+        "BIOWARE_DERMAL": "Derman Bioware",
+        "BIOSENSE": "Biosense",
+        "SYMBIONT": "Symbiont",
         "BLADES": "Blades",
         "BOATS": "Boats",
         "BOWS": "Bows",
+        "BALLISTAS": "Ballistas",
         "BREAKING": "Breaking",
         "BTL": "BTLs",
         "CANNONS_LAUNCHERS": "Cannons & Launchers",
@@ -305,9 +310,18 @@
         "CYBER_LIMB_ACCESSORY": "Cyberlimb Accessories",
         "CYBER_LIMB_ENHANCEMENT": "Cyberlimb Enhancements",
         "CYBER_LIMBS": "Cyberlimbs",
+        "CYBERNETIC_RESTRAINT": "Cybernetic Restraint",
+        "COSMETIC": "Cosmetic Cyberware",
         "CYBERDECK": "Cyberdeck",
         "CYBERJACK": "Cyberjack",
-        "DRUGS": "Drugs",
+        "ATTRIBUTE_CODEMOD": "Attribute Codemod",
+        "CORE_CODEMOD": "Core Codemod",
+        "PROCESSOR": "Processor",
+        "IO": "IO",
+        "DIGITAL_WEAPON": "Digital Weapon",        
+        "DRUGS": "Drugs",     
+        "PERFUME": "Perfume",     
+        "ESPIONAGE": "Espionage",
         "ELECTRONIC_ACCESSORIES": "Electronic Accessories",
         "EXPLOSIVES": "Explosives",
         "FIREARMS": "Firearms",
@@ -333,7 +347,7 @@
         "ID_CREDIT": "ID and Credsticks",
         "IMAGING": "Imaging",
         "INDUSTRIAL_CHEMICALS": "Industrial Chemicals",
-        "INSTRUMENT": "Instruments",
+        "INSTRUMENT": "Mustical Instrument",
         "INSTRUMENT_ACCESSORY": "Instrument Accessories",
 		  "LARGE_DRONES": "Large Drones",
         "LAUNCHERS": "Launchers",
@@ -371,6 +385,17 @@
         "MOD_RACK": "Drone Racks",
         "MOD_OTHERS": "Other Hardpoint Mods",
         "MOD_PROPULSION": "Secondary Propulsion Systems",
+        "NANITES_COSMETIC": "Cosmetic Nanites",
+        "NANITES_THERAPEUTIC": "Therapeutic Nanites",
+        "NANITES_BIOAMP": "Bioamplifier Nanites",
+        "NANITES_UTILITIES": "Utility Nanites",
+        "NANITES_TRANSIENT": "Transient-only Nanites",
+        "NANOTECH_KIT": "Nanotech Kit",
+        "THERAPEUTIC": "Therapeutic",
+        "AUGMENTICS": "Augmentics",
+        "COMPLEMENTARY_GENETIC_MODS": "Complementary Genetic Mod",
+        "TRANSGENICS": "Transgenics",
+        "TRANSGENIC_BIOWARE": "Transgenic Bioware",
         "NANOWARE_HARD": "Hard Nanoware-System",
         "NANOWARE_SOFT": "Soft Nanoware-System",
         "NANO_CYBERWARE": "Nano-Cyberware",
@@ -394,7 +419,7 @@
         "SENSOR": "Sensors",
         "SENSOR_HOUSING": "Sensor Housing",
         "SHOTGUNS": "Shotguns",
-        "SKILLSOFT": "Skillsofts",
+        "SKILLSOFT": "Skillsoft",
         "SLAP_PATCHES": "Slap-Patches",
 			"SMALL_DRONES": "Small Drones",
         "SNIPER_RIFLES": "Sniper Rifles",
@@ -403,15 +428,22 @@
         "SPECIAL_WEAPONS": "Special Weapons",
         "SUBMACHINE_GUNS": "Submachine Guns",
         "SUBMARINES": "Submarines",
-        "SURVIVAL_GEAR": "Survival",
+        "SURVIVAL_GEAR": "Survival Gear",
+        "WINTER_GEAR": "Winter Gear",
         "SYMBIONTS": "Symbionts",
         "TAC_NET": "Tactical Network",
+        "DATATERM": "Data Terminal",
+        "CYBERTERM": "Cyber Terminal",
+        "BTLS": "BTL's",
         "TASERS": "Taser",
         "THROWERS": "Throwers",
         "THROWING": "Throwing weapons",
+        "DMSO": "Air-propelled DMSO gel packs",
+        "DART": "Air-propelled Darts",
         "TRANSGENETICS": "Transgenetics",
         "TACNET_PROGRAM": "TAC-NetProgram",
         "TOOLS": "Tools",
+        "SPARE_PARTS": "Spare Parts",
         "PLACEHOLDERS": "Standard Goods",
         "TOXINS": "Toxins",
         "TRUCKS": "Pickup Trucks",
@@ -422,21 +454,26 @@
         "VEHICLE_ACCESSORY": "Vehicle Accessories",
         "VISION_ENHANCEMENT": "Vision Enhancement",
         "VTOL": "VTOL/VSTOL",
+        "BUS": "Bus",
+        "PWC": "Personal Watercraft",
+        "SHIPS": "Ship",
+        "AIRSHIP": "Airship",
         "WALKER": "Walker",
         "WEAPON_SECURITY": "Weapon Security Option",
         "WHIPS": "Whips",
         "LMG": "Light Machine Gun",
         "MMG": "Medium Machine Gun",
         "HMG": "Heavy Machine Gun",
-        "HACKING_PROGRAM": "Hackingprograms",
-        "BASIC_PROGRAM": "Basicprograms",
-        "RIGGER_PROGRAM": "Riggerprograms",
-        "AUTOSOFT": "Autosofts",
+        "HACKING_PROGRAM": "Hacking Program",
+        "BASIC_PROGRAM": "Basic Program",
+        "RIGGER_PROGRAM": "Rigger Program",
+        "AUTOSOFT": "Autosoft",
         "DATASOFT": "Datasoft",
         "MAPSOFT": "Mapsoft",
         "SHOPSOFT": "Shopsoft",
         "TALENTSOFT": "Talentsoft",
         "TEACHSOFT": "Teachsoft",
+        "ESOFT": "E-Soft",
         "GROUND": "Ground Drones",
         "ANTHRO": "Antropomorph Drones",
         "AIR": "Air Drones",
@@ -525,6 +562,7 @@
       "BIOWARE": "Bioware",
       "CHEMICALS": "Chemicals",
       "CYBERWARE": "Cyberware",
+      "CODEMODS": "Codemods",
       "DRONES": "Drones",
       "ELECTRONICS": "Electronics",
       "GENETICS": "Geneware",
@@ -1902,6 +1940,30 @@
           "modular": "//MODULAR//",
           "music": "//MUSIC//",
           "primal": "//PRIMAL//"
+        }
+      }
+    },
+    "Item": {
+      "base": {
+        "FIELDS": {
+          "xxx": {
+            "label": "xxx"
+          }
+        }
+      },
+      "sprite": {
+        "FIELDS": {
+          "xxx": {
+            "label": "xxx"
+          }
+        },
+        "TYPES": {
+          "accessory_weapon": "Weapon Accessory",
+          "weapon_mod": "Weapon Mod",
+          "armor_mod": "Armor Mod",
+          "accessory_electronics": "Electronics Accessory",
+          "visual_enhancement": "Visual Enhancement",
+          "audio_enhancement": "Audio Enhancement"
         }
       }
     },
