Update ru.json up to 2f0b734

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -66,7 +66,8 @@
 			"skill": "Язык/Знание",
 			"software": "Программа",
 			"spell": "Заклинание",
-			"weapon": "Оружие"
+			"weapon": "Оружие",
+			"mod": "Модификация снаряжения"
 		}
 	},
 	"attrib": {
@@ -287,11 +288,15 @@
 				"BIOWARE_CULTURED": "Культивированные биоимпланты",
 				"BIOWARE_STANDARD": "Обычные биоимпланты",
 				"BIOWARE_IMPLANT_WEAPON": "Биоимплантное оружие",
+				"BIOWARE_DERMAL": "Кожные биоимпланты",
+				"BIOSENSE": "Биоимплатные органы чувств",
+				"SYMBIONT": "Симбионты",
 				"BLADES": "Клинки",
 				"BOATS": "Лодки",
 				"BOWS": "Луки",
+				"BALLISTAS": "Баллисты",
 				"BREAKING": "Устройства взлома",
-				"BTL": "Жучки",
+				"BTL": "ЖЧК",
 				"CANNONS_LAUNCHERS": "Пушки и пусковые установки",
 				"CARS": "Автомобили",
 				"CLOSE_COMBAT": "Ближний бой",
@@ -308,9 +313,18 @@
 				"CYBER_LIMB_ACCESSORY": "Аксессуары для киберконечностей",
 				"CYBER_LIMB_ENHANCEMENT": "Усилители киберконечностей",
 				"CYBER_LIMBS": "Киберконечности",
+				"CYBERNETIC_RESTRAINT": "Средства сдерживания киберимплантов",
+				"COSMETIC": "Косметические киберимпланты",
 				"CYBERDECK": "Кибердеки",
 				"CYBERJACK": "Киберразъёмы",
-				"DRUGS": "Наркотики",
+				"ATTRIBUTE_CODEMOD": "Кодмоды характеристики",
+				"CORE_CODEMOD": "Основные кодмоды",
+				"PROCESSOR": "Процессоры",
+				"IO": "Вход/Выход",
+				"DIGITAL_WEAPON": "Цифровое оружие",        
+				"DRUGS": "Наркотики",  
+				"PERFUME": "Духи",     
+				"ESPIONAGE": "Шпионаж",
 				"ELECTRONIC_ACCESSORIES": "Аксессуары для электроники",
 				"EXPLOSIVES": "Взрывчатка",
 				"FIREARMS": "Огнестрельное оружие",
@@ -326,23 +340,23 @@
 				"GENOM_CHANGES": "Изменения генома",
 				"EXOTIC_METAGENETICS": "Экзотическая метагенетика",
 				"MICRO_ENVIRONADAPT": "Микроадаптации к среде",
-				"COMPLEMENTAL_GENETICS": "Дополнительная генетика",
-				"GRAPPLE_GUN": "Пистолет с кошкой",
+				"COMPLEMENTAL_GENETICS": "Комплиментарная генетика",
+				"GRAPPLE_GUN": "Пистолеты с кошкой",
 				"GRAV": "Транспорт на гравидвигателе",
 				"GRENADES": "Гранаты",
 				"GRENADES_MINI": "Минигранаты",
 				"HOLDOUTS": "Карманные пистолеты",
-				"HOVERCRAFT": "Судно на воздушной подушке",
+				"HOVERCRAFT": "Судна на воздушной подушке",
 				"ID_CREDIT": "Документы и кредиты",
 				"IMAGING": "Отображение",
 				"INDUSTRIAL_CHEMICALS": "Промышленные химикаты",
-				"INSTRUMENT": "Инструменты",
+				"INSTRUMENT": "Музыкальные инструменты",
 				"INSTRUMENT_ACCESSORY": "Аксессуары к инструментам",
 				"LARGE_DRONES": "Большие дроны",
 				"LAUNCHERS": "Пусковые установки",
 				"LAV": "Низколетящие летательные аппараты",
 				"LTAV": "Летательные аппараты легче воздуха",
-				"LIVING_PERSONA": "Живой аватар",
+				"LIVING_PERSONA": "Живые аватары",
 				"MACHINE_GUNS": "Пулемёты",
 				"MACHINE_PISTOLS": "Автоматические пистолеты",
 				"MAGICAL_FORMULA": "Магические формулы",
@@ -362,7 +376,7 @@
 				"MOD_INTERIOR": "Модификации посадочных и грузовых мест",
 				"MOD_CARGO": "Модификации ГФ",
 				"MOD_FORM": "Формы",
-				"MOD_ARMOR": "Основа",
+				"MOD_ARMOR": "Основы",
 				"MOD_ELEMENTS": "Элементы",
 				"MOD_ACC": "Модификации ускорения",
 				"MOD_EFFICIENCY": "Модификации эффективности",
@@ -374,6 +388,17 @@
 				"MOD_RACK": "Гнёзда для дронов",
 				"MOD_OTHERS": "Прочие модификации",
 				"MOD_PROPULSION": "Дополнительные системы ускорения",
+				"NANITES_COSMETIC": "Косметические наниты",
+				"NANITES_THERAPEUTIC": "Терапевтические наниты",
+				"NANITES_BIOAMP": "Наниты-биоусилители",
+				"NANITES_UTILITIES": "Вспомогательные наниты",
+				"NANITES_TRANSIENT": "Транзиторные наниты",
+				"NANOTECH_KIT": "Нанотехнологические комплекты",
+				"THERAPEUTIC": "Терапевтические",
+				"AUGMENTICS": "Аугментические",
+				"COMPLEMENTARY_GENETIC_MODS": "Комплиментарно-генетикие",
+				"TRANSGENICS": "Трансгенные",
+				"TRANSGENIC_BIOWARE": "Трансгенные биоимпланты",
 				"NANOWARE_HARD": "Технические нанокибернетические системы",
 				"NANOWARE_SOFT": "Программные нанокибернетические системы",
 				"NANO_CYBERWARE": "Нанокибернетические импланты",
@@ -407,14 +432,21 @@
 				"SUBMACHINE_GUNS": "Пистолеты-пулемёты",
 				"SUBMARINES": "Подводные лодки",
 				"SURVIVAL_GEAR": "Снаряжение для выживания",
+				"WINTER_GEAR": "Зимнее снаряжение",
 				"SYMBIONTS": "Симбионты",
-				"TAC_NET": "Тактическая сеть",
+				"TAC_NET": "Тактические сети",
+				"DATATERM": "Инфотерминалы",
+				"CYBERTERM": "Кибертерминалы",
+				"BTLS": "ЖЧК",
 				"TASERS": "Шокеры",
 				"THROWERS": "Разбрызгиватели",
 				"THROWING": "Метательное оружие",
+				"DMSO": "ДМСО гелевые пули",
+				"DART": "Дротики",
 				"TRANSGENETICS": "Трансгенетика",
-				"TACNET_PROGRAM": "Программа тактической сети",
+				"TACNET_PROGRAM": "Программы тактической сети",
 				"TOOLS": "Инструменты",
+				"SPARE_PARTS": "Запасные части",
 				"PLACEHOLDERS": "Стандартные товары",
 				"TOXINS": "Токсины",
 				"TRUCKS": "Пикапы",
@@ -425,6 +457,10 @@
 				"VEHICLE_ACCESSORY": "Модификации транспортных средства",
 				"VISION_ENHANCEMENT": "Визуальные устройства",
 				"VTOL": "СВВП/СУВП",
+				"BUS": "Автобусы",
+				"PWC": "Гидроциклы",
+				"SHIPS": "Корабли",
+				"AIRSHIP": "Дирижабли",
 				"WALKER": "Шагоходы",
 				"WEAPON_SECURITY": "Опции оружейной безопасности",
 				"WHIPS": "Хлысты",
@@ -440,6 +476,7 @@
 				"SHOPSOFT": "Магазинный софт",
 				"TALENTSOFT": "Софт навыка",
 				"TEACHSOFT": "Обучающий софт",
+				"ESOFT": "Э-софт",
 				"GROUND": "Наземные дроны",
 				"ANTHRO": "Антропоморфные дроны",
 				"AIR": "Воздушные дроны",
@@ -530,10 +567,11 @@
 			"CYBERWARE": "Киберимпланты",
 			"DRONES": "Дроны",
 			"ELECTRONICS": "Электроника",
-			"GENETICS": "ГЕНЕТИКА",
+			"GENETICS": "Генетика",
 			"MAGICAL": "Волшебные",
-			"NANOWARE": "НАНОТЕХНОЛОГИИ",
+			"NANOWARE": "Нанотехнологии",
 			"SOFTWARE": "Программа",
+			"CODEMODS": "Кодмоды",
 			"SURVIVAL": "Снаряжение для выживания",
 			"TOOLS": "Инструменты",
 			"VEHICLES": "Транспортные средства",
@@ -603,7 +641,7 @@
 			"legality.legal.long": "Легально",
 			"level": "Есть уровни",
 			"mages": "Маги",
-			"matrixMonitor": "Состояние матрицы",
+			"matrixMonitor": "Состояние Матрицы",
 			"max": "Максимум",
 			"mode_of_operation": "Режим",
 			"modifications": "Модификации",
@@ -917,7 +955,8 @@
 			"gruntrules": "Использует правила пешек",
 			"mortype": "Магия/Резонанс",
 			"grunt_group": "Отряд",
-			"grunt_group_id": "О{groupId}"
+			"grunt_group_id": "О{groupId}",
+			"grunt_group_attack": "Атаковать отрядом (x{numberGrunts})"
 		},
 		"numerical": {
 			"base": "баз",
@@ -1390,12 +1429,12 @@
 		"sin": {
 			"quality": "Качество",
 			"real_sin": "Настоящий ГРЕХ",
-			"anyone": "Липа",
-			"rough_match": "Сойдёт",
-			"good_match": "Похож на настоящий",
-			"superficially_plausible": "Подозрительно правдоподобный",
-			"highly_plausible": "Очень правдоподобный",
-			"second_life": "Вторая жизнь"
+			"anyone": "(Р1) Липа",
+			"rough_match": "(Р2) Сойдёт",
+			"good_match": "(Р3) Похож на настоящий",
+			"superficially_plausible": "(Р4) Подозрительно правдоподобный",
+			"highly_plausible": "(Р5) Очень правдоподобный",
+			"second_life": "(Р6) Вторая жизнь"
 		},
 		"softwareedit": {
 			"description": "Описание",
@@ -1860,7 +1899,7 @@
 			"Pool": "Набор кубиков: {pool} (полная замена)",
 			"defensepool.physical.mod": "Модификатор набора кубиков физической защиты",
 			"defensepool.astral.mod": "Модификатор набора кубиков астральной защиты",
-			"defensepool.matrix.mod": "Модификатор набора кубиков защиты в матрице",
+			"defensepool.matrix.mod": "Модификатор набора кубиков защиты в Матрице",
 			"defensepool.spells_direct.mod": "Модификатор набора кубиков защиты от заклинаний прямого действия",
 			"defensepool.spells_indirect.mod": "Модификатор набора кубиков защиты от заклинаний косвенного действия",
 			"defensepool.toxin.mod": "Модификатор набора кубиков сопротивления токсинам",
@@ -1869,7 +1908,7 @@
 			"defensepool.damage_astral.mod": "Модификатор набора кубиков астральной атаки",
 			"initiative.physical.diceMod": "Модификатор набора кубиков физической инициативы",
 			"initiative.astral.diceMod": "Модификатор набора кубиков астральной инициативы",
-			"initiative.matrix.diceMod": "Модификатор набора кубиков инициативы в матрице",
+			"initiative.matrix.diceMod": "Модификатор набора кубиков инициативы в Матрице",
 			"armor.mod": "Модификаторы брони:",
 			"weapon.mod": "Модификаторы оружия:",
 			"stunOrPhysical": "Оглушающий (истина) или Физический (ложь) урон"
@@ -1906,6 +1945,31 @@
 					"modular": "//МОДУЛЬНЫЙ//",
 					"music": "//МУЗЫКАЛЬНЫЙ//",
 					"primal": "//ПЕРВОРОДНЫЙ//"
+				}
+			}
+		},
+		
+		"Item": {
+			"base": {
+				"FIELDS": {
+					"xxx": {
+						"label": "xxx"
+					}
+				}
+			},
+			"sprite": {
+				"FIELDS": {
+					"xxx": {
+						"label": "xxx"
+					}
+				},
+				"TYPES": {
+					"accessory_weapon": "Приспособления для оружия",
+					"weapon_mod": "Модификации для оружия",
+					"armor_mod": "Модификации для брони",
+					"accessory_electronics": "Модификации для электроники",
+					"visual_enhancement": "Визуальные усиления",
+					"audio_enhancement": "Звуковые усиления"
 				}
 			}
 		},
