Added support applying matrix damage induced modifiers

--- a/lang/de.json
+++ b/lang/de.json
@@ -1038,6 +1038,7 @@
       "configure": "Justiere deinen Wurf",
       "wound-modifier": "Verwende Wundabzug",
       "sustained-spell-modifier": "Abzug durch aufr. Zauber",
+      "matrix-modifier": "Verwende Matrixabzug",
       "criticalglitch": "Kritischer Patzer",
       "heal_apply": "Heilung wirken",
       "damage": "Schaden: ",
