Update ru.json up to 52de2ae

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -328,7 +328,7 @@
 				"ELECTRONIC_ACCESSORIES": "Аксессуары для электроники",
 				"EXPLOSIVES": "Взрывчатка",
 				"FIREARMS": "Огнестрельное оружие",
-				"FIREARMS_ACCESSORY": "Модификации для оружия",
+				"FIREARMS_ACCESSORY": "Аксуссуары для оружия",
 				"FIXED_WING": "ЛА с неподвижным крылом",
 				"FOCI_ENCHANTING": "Зачаровывающие",
 				"FOCI_METAMAGIC": "Метамагические источники",
@@ -943,7 +943,8 @@
 			"vehicles": "Крутая тачка",
 			"weapon": "Имя добавляет пушке крутизны",
 			"weaponclose": "Кое-что потяжелее",
-			"weaponspecial": "Странная волына"
+			"weaponspecial": "Странная волына",
+			"mod": "Покрашено в розовый"
 		},
 		"npc": {
 			"subtype": {
@@ -1884,13 +1885,14 @@
 			"CantDelete": "Данный эффект можно удалить только с предмета, откуда он происходит."
 		},
 		"active_effect": {
-			"explanation": "Активные эффекты могут изменять модификаторы характеристик и наборы кубиков персонажей и предметов. Если вам не достёт какого-то элемента автоматизации, откройте тикет с соответствующим запросом на GitHub.",
+			"explanation": "Активные эффекты могут изменять модификаторы характеристик и наборы кубиков персонажей и предметов. Если вам не достаёт какого-то элемента автоматизации, откройте тикет с соответствующим запросом на GitHub.",
 			"usage_tips": {
 				"1": "В обычном режиме при помощи ключа модификатора можно изменить значение характеристики, размер набора кубиков или рейтинг.",
 				"2": "Используйте ключ набора кубиков только в случае, если значение характеристики нужно <em>полностью заменить</em>, как в случае с киберконечностями и прошивкой навыка.",
 				"3": "В соответствии с правилами шестой редакции Shadowrun, модификаторы характеристик автоматически ограничены до +4."
 			},
-			"item_tip": "Если вам нужно, чтобы модификатор изменял характеристику непосредственно предмета непосредственно, например у оружия, то вам <em>необходимо</em> снять галочку <em>«Передача эффекта актёру»</em> во вкладке «Подробности». Один эффект может применяться <em>только либо</em> к предмету, <em>либо</em> к актёру.",
+			"item_tip": "Если вам нужно, чтобы модификатор изменял характеристику непосредственно предмета непосредственно, то вам <em>необходимо</em> снять галочку <em>«Передача эффекта актёру»</em> во вкладке «Подробности». Один эффект может применяться <em>только либо</em> к предмету, <em>либо</em> к актёру.",
+			"gear_mod_tip": "Это активный эффект <strong>модификации снаряжения</strong>. Такие эффекты применяются к предметам, на которые установлена модификация.",
 			"more_info": "Для подробной информации пройдите по следующей ссылке:",
 			"advanced": "Продвинутый режим?",
 			"advanced_hint": "Если поставлена галочка, то вы можете использовать системные ключи атрибутов вместо предложенного перечня для шестой редакции Shadowrun.",
@@ -1952,24 +1954,35 @@
 		"Item": {
 			"base": {
 				"FIELDS": {
-					"xxx": {
-						"label": "xxx"
+					"genesisID": {
+						"label": "GenesisID"
+					},
+					"availDef": {
+						"label": "Дост."
+					},
+					"price": {
+						"label": "Стоимость"
 					}
 				}
 			},
-			"sprite": {
+			"mod": {
 				"FIELDS": {
-					"xxx": {
-						"label": "xxx"
+					"embeddedInUuid": {
+						"label": "Модифицированный предмет"
 					}
 				},
 				"TYPES": {
-					"accessory_weapon": "Приспособления для оружия",
+					"accessory_weapon": "Аксессуары для оружия",
 					"weapon_mod": "Модификации для оружия",
 					"armor_mod": "Модификации для брони",
 					"accessory_electronics": "Модификации для электроники",
 					"visual_enhancement": "Визуальные усиления",
 					"audio_enhancement": "Звуковые усиления"
+				},
+				"label": {
+					"section": "Модификации снаряжения",
+					"not_installed": "(не установлено)",
+					"uninstall": "Снять модификацию"
 				}
 			}
 		},
