Add correct hint titles to the enable/disable Matrix Devices toggle

--- a/lang/en.json
+++ b/lang/en.json
@@ -683,6 +683,10 @@
         "outsider": "OUTSIDER",
         "user": "USER",
         "admin": "ADMIN"
+      },
+      "device": {
+        "enable": "Enable Matrix Device",
+        "disable": "Disable Matrix Device"
       }
     },
     "matrixaction": {
