Add localizations for the titles of Creating New Effect (#143)

--- a/lang/en.json
+++ b/lang/en.json
@@ -1877,6 +1877,8 @@
     },
     "effect": {
       "Label": "Effects",
+      "Create": "Create New Effect",
+      "New": "New Effect",
       "Duration": "Duration",
       "Source": "Source",
       "Toggle": "Toggle Effect",
