Update ru.json up to 6b27d4a

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -37,7 +37,7 @@
 	},
 	"QUALITY_CATEGORIES": {
 		"ADVANTAGE": "Положительное качество",
-		"DISADVANTAGE": "Отричательное качество"
+		"DISADVANTAGE": "Отрицательное качество"
 	},
 	"TYPES": {
 		"Actor": {
@@ -1882,6 +1882,8 @@
 		},
 		"effect": {
 			"Label": "Эффекты",
+			"Create": "Создать новый эффект",
+			"New": "Новый эффект",
 			"Duration": "Продолжительность",
 			"Source": "Источник",
 			"Toggle": "Вкл./Выкл. эффект",
