Update ru.json up to 1f3a651

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1921,7 +1921,8 @@
 			"initiative.matrix.diceMod": "Модификатор набора кубиков инициативы в Матрице",
 			"armor.mod": "Модификаторы брони:",
 			"weapon.mod": "Модификаторы оружия:",
-			"stunOrPhysical": "Оглушающий (истина) или Физический (ложь) урон"
+			"stunOrPhysical": "Оглушающий (истина) или Физический (ложь) урон",
+			"dicePoolMod": "Бонус ко всем наборам кубиков"
 		},
 		"KEYBINDINGS": {
 			"bindTokenControlGroup": "Связать выбранные токены в группу управления",
