Update ru.json up to d96a734

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1695,7 +1695,9 @@
 			"ammo": "Патроны",
 			"ammo_loaded": "Тип патронов",
 			"reload_ammo": "Перезарядить патроны",
-			"ammo_changes_combat": "Смена типа патронов в бою"
+			"ammo_changes_combat": "Смена типа патронов в бою",
+			"ammo_cap": "Количество патронов",
+			"ammo_cap_short": "Кол-во патр."
 		},
 		"ui": {
 			"notifications": {
@@ -1906,7 +1908,7 @@
 			"advanced_hint": "Если поставлена галочка, то вы можете использовать системные ключи атрибутов вместо предложенного перечня для шестой редакции Shadowrun.",
 			"Modifier": "Модификатор: {attribute}",
 			"Skill": "Навык: {skill}",
-			"Pool": "Набор кубиков: {pool} (полная замена)",
+			"Pool": "Набор кубиков: {pool} (перезапись)",
 			"defensepool.physical.mod": "Модификатор набора кубиков физической защиты",
 			"defensepool.astral.mod": "Модификатор набора кубиков астральной защиты",
 			"defensepool.matrix.mod": "Модификатор набора кубиков защиты в Матрице",
@@ -1921,8 +1923,9 @@
 			"initiative.matrix.diceMod": "Модификатор набора кубиков инициативы в Матрице",
 			"armor.mod": "Модификаторы брони:",
 			"weapon.mod": "Модификаторы оружия:",
-			"stunOrPhysical": "Оглушающий (истина) или Физический (ложь) урон",
-			"dicePoolMod": "Бонус ко всем наборам кубиков"
+			"stunOrPhysical": "Оглушающий (true) или Физический (false) урон",
+			"dicePoolMod": "Бонус ко набору кубиков",
+			"wild": "Использовать (установите Перезапись: true)"
 		},
 		"KEYBINDINGS": {
 			"bindTokenControlGroup": "Связать выбранные токены в группу управления",
