Update ru.json up to

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1884,6 +1884,7 @@
 		},
 		"effect": {
 			"Label": "Эффекты",
+			"Label_one": "Эффект",
 			"Create": "Создать новый эффект",
 			"New": "Новый эффект",
 			"Duration": "Продолжительность",
